--- a/appspec.yml
+++ b/appspec.yml
@@ -4,20 +4,7 @@ files:
   - source: /
     destination: /home/ubuntu/seat-test/SEAT-test-master
 hooks:
-  BeforeInstall:
-    - location: scripts/install_dependencies.sh
-      timeout: 300
-      runas: root
-  AfterInstall:
-    - location: scripts/change_permissions.sh
-      timeout: 300
-      runas: root
   ApplicationStart:
-    - location: scripts/start_server.sh
-    - location: scripts/create_test_db.sh
-      timeout: 300
-      runas: root
-  ApplicationStop:
-    - location: scripts/stop_server.sh
+    - location: start.sh
       timeout: 300
       runas: root
